# aage_practica2

part1_federated/: .gitignore  check_torch.py  create_partion_and_histograms.py  fashion_inspect.py  fashion_local_train.py  pyproject.toml  requirements.txt  results_FedAvg.json  test_task_local.py
part1_federated/fashion_example/: client_app.py  fedavg_logs.txt  server_app.py  task.py
