[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fashion_flower"
version = "1.0.0"
license = "Apache-2.0"
description = "Federated learning with PyTorch on Fashion-MNIST and Flower"
authors = [
    { name = "Sergio Varela" },
]
dependencies = [
    "flwr[simulation]>=1.12.0",
    "numpy<2.0.0",
    "torch",
    "torchvision",
    "matplotlib",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[tool.flwr.app]
publisher = "sergio"

[tool.flwr.app.components]
serverapp = "fashion_example.server_app:app"
clientapp = "fashion_example.client_app:app"

[tool.flwr.app.config]
num-server-rounds = 3
fraction-fit = 1.0
min-available-clients = 10
num-clients = 10
local-epochs = 1
batch-size = 32
lr = 0.01
alpha-dirichlet = 0.05

[tool.flwr.federations]
default = "local-simulation"

[tool.flwr.federations.local-simulation]
options.num-supernodes = 10
